# model-training

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pylintrc  pyproject.toml  setup.py
.dvc/: config
data/raw/: .gitignore
docs/: conf.py  index.rst
models/: .gitignore
notebooks/: phishing-detection-cnn.ipynb
operation/: ACTIVITY.md
src/data/: fetch_dataset.py  make_dataset.py
src/models/: evaluation.py  train_model.py
