[tool.poetry]
name = "src"
version = "0.1.0"
description = "Project of the TU Delft Masters course Release Engineering of Machine Learning Applications by group 11"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
keras = "3.3.3"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.4.2"
setuptools = "68.0.0"
tensorflow = "2.16.1"

[tool.poetry.dev-dependencies]
pylint = "3.1.0"
astroid = "3.1.0"
pre-commit = "^3.7.0"
flake8 = "4.0.1"
dvc = "3.50.1"
dvclive = "3.46.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
